# AcadHub

./: .env.example  .gitignore  CONTRIBUTING.md  FIXES_IMPLEMENTED.md  PROJECT_GUIDE.md  QUICKSTART.md  README.md  docker-compose.yml  extensions.txt  setup.bat  setup.sh
.postman/: resources.yaml
ai-service/: .env.example  .env.example.proper  Dockerfile  INSTALLATION_COMPLETE.md  main.py  pyproject.toml  requirements.txt  test_startup.py
ai-service/app/: __init__.py
ai-service/app/config/: database.py  settings.py
ai-service/app/models/: schemas.py
ai-service/app/routes/: document_intelligence.py  embed.py  health.py  qa.py  search.py
ai-service/app/services/: cache.py  chunking.py  embedding.py  metrics.py  qa.py  rate_limiter.py  runtime_state.py  search.py  summarization.py  tagging.py
ai-service/app/utils/: resilience.py  sanitize.py
backend/: .env.example  .eslintrc.cjs  .gitignore  Dockerfile  check_db_name.js  jsconfig.json  package-lock.json  package.json
backend/src/: index.js
backend/src/config/: database.js  firebase.js  logger.js
docs/: API.md  FRONTEND_ROADMAP.md  mongo-init.js
frontend/: .env.example  .eslintrc.cjs  Dockerfile  dev.out  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  constants.js  main.jsx
mobile-app/: .env.example  .gitignore  App.tsx  README.md  app.config.js  app.json  metro.config.js  package.json
mobile-app/app/: _layout.tsx
mobile-app/services/: api.js  firebase.js  rateLimiter.js
mobile-app/store/: index.js
(+69 files in other folders)
